welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:8: error: too many arguments for method baisseBrosse: ()Unit
		baisseBrosse(c:Color)
                            ^MethodsPicture:9: error: too many arguments for method leveBrosse: ()Unit
		leveBrosse(c:Color)
                          ^